# Galaxy

./: CMakeLists.txt  README.md  main.cpp
Classes/: CMakeLists.txt
Classes/include/: Background.h  Collision2D.h  Fire.h  Health.h  Input.h  Player.h  Rock.h  Score.h  Time.h
Classes/src/: Background.cpp  Collision2D.cpp  Fire.cpp  Health.cpp  Input.cpp  Player.cpp  Rock.cpp  Score.cpp
